@@ -6,6 +6,8 @@
 ~~~~~~~~~~~
 Set _WIN_HINTS for pinboard and panel icons so that they don't appear on
 task-lists or get selected when Alt-Tabbing (Brendan McCarthy).
+Allow COMPOUND_TEXT target for pinboard and panels (allows pasting into
+gnome-terminal).
 
 17-Mar-2002
 ~~~~~~~~~~~
